htdocs/t/cocktails.css
.body-wrapper { overflow: hidden; }
.b-title, #cocktail-page .b-title { padding-bottom: 11px; }
.b-title h1, #cocktail-page .b-title h1 {font-size:20px } 
.b-title #spotlighted .group {display:none}
#search_tabs { overflow: hidden; margin-bottom:-1px; position:relative; }
#search_tabs li { margin-right: 1px; float: left; background-position: -125px -100px; width: 112px; height: 21px; line-height:21px; padding: 0 3px; font-size: 11px; text-align: center; cursor: pointer;}
#search_tabs li.selected {background-position: 0px -100px; cursor: default;}

#search_by_letter a {text-decoration:none; font-size: 14px;}
#letters_all{float:left; width: 40px; text-align:center;}
#alphabetical-ru {float:right; overflow:hidden; width:540px; margin-top:2px;}
#alphabetical-ru a {margin-right: 1px; float:left; display:block; width:18px; height: 18px; line-height:15px; text-align:center; padding-left:1px;}
#alphabetical-ru a.selected-button {background-position: -125px -125px; cursor: default; }

#search_by_ingreds { z-index: 10; position: relative; }
.autocomplete { display: none; position: absolute; opacity: 0.9; border-width: 0px 1px 1px 1px; font-size: 14px; }
.autocomplete .item { padding: 2px 0 4px 5px; cursor: pointer; }
.search-error{display:none;height:12px;}


.ingreds-list { position: relative; width:574px; height: 22px; background-position: 0 -175px; color: #FFF; font-size: 11px; padding-left:15px; margin-top: 3px;  }
.ingreds-list .list { overflow: hidden; width:550px; white-space: nowrap; text-overflow: ellipsis; -o-text-overflow: ellipsis; }
.ingreds-list a:hover {text-decoration:line-through;}

.ingreds-list .rem { position: absolute; top: 0; right: 0; background-position: -175px -125px; width: 11px; height: 11px; overflow: hidden; text-indent: -100em; display: block; margin: 3px; }
.ingreds-list .rem:hover {background-position: -189px -125px; }
#ingredients_list { width: 550px; height:17px; line-height:15px; }
#spotlighted { position: absolute; background-position: -550px -100px;}




/*Block content*/
/*pager list*/
.b-content { margin-top: 20px; }
.b-content .alphabetical{font-size:110%;margin-bottom:22px;}
.b-content .alphabetical .wrapper{display:block;padding:6px 0 9px 10px;position:relative;}
.b-content .alphabetical .p-list a{margin:0 -1px 0px 0px;text-decoration:none;}
.b-content ul.cocktails{overflow:hidden;}
/* and index */
.b-content ul.cocktails li{float:left;width:90px;padding:0 10px;height:140px;position:relative;}
.b-content ul.cocktails li a{font-size:120%;}
.b-content ul.cocktails li img{display:block;padding-bottom:7px;padding-right:30px;margin-left:-10px;width:60px;height:80px;}
.mini-illustration {z-index:2} /* also applied to the dragged element */


.pager-big {width:64px; height:24px; position:absolute; z-index: 2; left: 565px; top: 409px; }
.pager-big .prev,
.pager-big .next {float:left; display:block;}
.pager-big .prev {background-position: -0px -125px; }
.pager-big .next {background-position: -25px -125px; }

.pager-big .prev.disabled,
.pager-big .next.disabled {cursor:default;}
.pager-big .prev.disabled {background-position: -0px -150px; }
.pager-big .next.disabled {background-position: -25px -150px; }

.b-content .pager{height:20px;padding:17px 0 0 0;margin-top:18px;position:relative;background:url(bg/body/hr-repeat.png) repeat-x 0 0;font-size:110%;text-align:center;}
.b-content .pager .p-list {display: inline;}
.b-content .pager .p-list a{line-height: 18px; text-align:center; text-decoration:none;}
.b-content .pager .p-list a.selected-button { background-position: -100px -125px; cursor: default;}
.b-content .pager .prev,
.b-content .pager .next{text-decoration:none; font-size: 15px; line-height:14px;}
.b-content .pager .prev { margin-right:3px;}
.b-content .pager .next { margin-left: 1px;}
.b-content .pager .disabled{cursor:default; color: #c0c0c0;}
.b-content .viewport{height:560px;overflow:hidden;position:relative;}
.b-content .surface{padding:500px;width:10000px;}


.search-form {position:relative;}
.search-form input{width:559px; padding:2px 0 2px 20px;font-size:14px;text-align:left; background: transparent; line-height: 18px; height:18px; border: none;}
.search-form small{color:#f1f7b6;line-height:1.5;display:block;}
.search-form dl{overflow:hidden;}
.search-form dt{padding:0;font-size:92%;}
.search-form dd{background-color:#89af21;cursor:pointer;margin-bottom:3px;height:auto;overflow:hidden;padding:0 0 2px;}
.search-form .substr{font-weight: bold;}


.b-search{position:absolute;margin-right:2em;width:14em;}
#all_list{font-size:1.1em;padding:0 0 0 20px; margin-top: -22px; position:relative; float:right; height:19px;}
#all_list i { position: absolute; left: -1px; top: -5px; width: 25px; height: 25px; background-position: -150px -125px; }
.b-search dl{font-size:120%;line-height:1.5;}
.b-search dt{font-weight:bold;padding:16px 0 0 6px;}
.b-search dd{line-height:1.4;margin:1px 0;height:17px;}
.b-search dd{line-height:1.4;margin:1px 0;height:17px;}


.b-search .groups dd { padding-left: 6px; cursor: pointer; }
.b-search .groups dd:hover { text-decoration: underline; }
.b-search .groups dd.selected-button {background-position: -250px -100px; width: 140px; height:17px; line-height:16px; }
.b-search .groups dd.selected-button:hover { background-position: -400px -100px; text-decoration: none; }
.b-search .groups dd.disabled {text-decoration:none;cursor:default;}

.b-search form input{border:1px solid;text-align:center;height:15px;font-size:1em;line-height:1;padding:3px 0 0 0;border-color:#d7d7d7 #fff #fff #d7d7d7;background:#f1f7b6;margin:0;width:35px;}

.search-control {background-position: 0px 0px; padding:5px; color:#fff; height: 22px;}
.search-control#search_by_letter { background-position: 0 -50px; }

.b-content {width:100%;}
#b_search {display:none;}
#results_display {/*padding-left: 23px;*/}
#results_display .viewport {width:585px;margin-left:0px; }
#results_display .point{height:560px;width:550px;padding: 0 0 0 35px;float:left;}
#results_display.byIngredients .viewport {width:440px;margin-left: 145px; }
#results_display.byIngredients .point {width:440px;padding: 0 35px 0 0;}
#results_display .surface { width: 20000px; }
#search_tips { height: 14px}
#search_tips a:hover {text-decoration:none;}
#search_tips a {border-bottom:1px dashed;}


<!--# if expr="$HTTP_USER_AGENT = /MSIE 6/" -->
.b-search form dl,
.b-content ul.cocktails li img,
.b-search form dd
{zoom:1}

.b-content ul.cocktails img {scrollbar-base-color:expression((runtimeStyle.scrollbarBaseColor="transparent")&&(offsetWidth?(runtimeStyle.width=offsetWidth+'px'):1)&&(offsetHeight?(runtimeStyle.height=offsetHeight+'px'):1)&&(runtimeStyle.filter=(runtimeStyle.filter?runtimeStyle.filter+';':'')+'progid:DXImageTransform.Microsoft.AlphaImageLoader(src="'+src+'",sizingMethod="image")')&&(src='/t/0.png'));}


#top { left: -9px; }
.search-form {z-index:1;}
.search-form input { position:absolute; border-width: 1px 0 0; border-color: #c9c9c9; border-style:solid; margin-left:0; }
.pager-big .prev {background-position-x:0px}

.b-content ul.cocktails{zoom:1;margin-right:-20px;}
.b-content ul.cocktails li{float:none;display:inline;zoom:1;}

.b-content .pager .prev,
.b-content .pager .next
{font-size: 17px;}

/*.b-content .pager .prev{background-position-x:0;}
.b-content .pager .disabled{background-position-y:-12px;}
*/


.b-search{width:140px;overflow:hidden;}
.b-search form dd span{white-space:normal;}
.b-search form dd a{position:relative;right:-5px;}

#search_tabs { zoom:1}
<!--# endif -->

<!--# if expr="$HTTP_USER_AGENT = /MSIE 7/" -->
.search-form {z-index:1;}
.search-form input { height: 22px; line-height: 22px; position:absolute}
<!--# endif -->

